# django-printforms

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.in  requirements.txt
apps/django_printforms/: apps.py  loader.py  models.py
apps/django_printforms/admin/: __init__.py  forms.py  model_admin.py
apps/django_printforms/common/: custom_types.py
apps/django_printforms/logic/: interactors.py  selectors.py
apps/django_printforms/migrations/: 0001_initial.py
apps/django_printforms/templates/django_printforms/: content_template_change_form.html
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py
django_printforms/: apps.py  exceptions.py  loader.py  models.py
django_printforms/admin/: __init__.py  forms.py  model_admin.py
django_printforms/common/: models.py
django_printforms/logic/: interactors.py  selectors.py
django_printforms/migrations/: 0001_initial.py
